# 100-Demand-Benchmarker

./: 01-ImportFunctions.py  04-DemandPatterns.py  PACKAGES.text  README.txt  graphs.py  main.py  main_2.py  old_forecasts.py  pyproject.toml  requirements.txt
DemandBenchmarker/: __init__.py  main.py
DemandBenchmarker/ExampleData/: DAW01__ZWPRODLOCSORGCHANDIVSOFFGRPCU_TEMPLATE.csv  DAW01__ZWPRODLOCSORGCHANDIVSOFFGRP_TEMPLATE.csv  Forecasting_beer_errors.csv  Forecasting_beer_filtered.csv  Forecasting_beer_subset.csv  Forecasting_df_test.csv  demand.xlsx  demand_forecast_single_ts.xlsx  dt_data.csv
DemandBenchmarker/Functions/: DemandCleansing.py  DemandPatterns.py  ExportResults.py  ForecastAlgorithms.py  ForecastError.py  ForecastOptimizer.py
ExampleData/: 2023-12-05-IBP-Test-Extract.xlsx  Forecasting_beer.parquet  Forecasting_beer_filtered.csv  Forecasting_beer_filtered.xlsx  Forecasting_beer_sub.csv  Forecasting_beer_subset.parquet  Forecasting_past_future.csv  ZACTUALSALES.csv  ZNETTO2REVENUE.csv  demand_forecast.xlsx  forecast_parameter.csv  global_parameter.csv  monthly_res_naive.xlsx  monthly_series.xlsx
Functions/: DemandCleansing.py  DemandPatterns.py  ExportResults.py  ForecastAlgorithms.py  ForecastError.py  ForecastOptimizer.py  ImportFunctions.py
Helper/: save to parquet.py
