[tool.poetry]
name = "demandbenchmarker"
version = "0.1.0"
description = ""
authors = ["Christian Birlo <christian@birlo.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
black = "23.11.0"
click = "8.1.7"
cmdstanpy = "1.2.0"
contourpy = "1.2.0"
cycler = "0.12.1"
fonttools = "4.45.1"
holidays = "0.37"
importlib-resources = "6.1.1"
kiwisolver = "1.4.5"
matplotlib = "3.8.2"
mypy-extensions = "1.0.0"
numpy = "1.26.2"
packaging = "23.2"
pandas = "2.1.3"
pathspec = "0.11.2"
pillow = "10.1.0"
platformdirs = "4.0.0"
polars = "0.19.19"
pyarrow = "14.0.1"
pyparsing = "3.1.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
scipy = "1.11.4"
six = "1.16.0"
stanio = "0.3.0"
tqdm = "4.66.1"
tzdata = "2023.3"
statsforecast = "^1.6.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
